--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,9 @@
                 </executions>
                 <configuration>
                     <jvmTarget>1.8</jvmTarget>
+                    <compilerPlugins>
+                        <plugin>jpa</plugin>
+                    </compilerPlugins>
                 </configuration>
             </plugin>
         </plugins>
