--- a/forounq-react/package.json
+++ b/forounq-react/package.json
@@ -7,7 +7,8 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-modal": "^3.8.1",
-    "react-router-dom": "^5.0.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.1"
